# envguard

./: LICENSE  README.md  pyproject.toml
envguard/: main.py
envguard/scanner/: file_walker.py
