[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "0.1.0"
description = "CLI tool to detect secrets and sensitive files in your projects"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
envguard = "envguard.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["envguard*"]